--- a/extension/foxsportsgo.css
+++ b/extension/foxsportsgo.css
@@ -2,7 +2,7 @@
  	z-index: 100 !important;
 }
 
-#p0 {
+body .fsgo .content .player-wrapper iframe#p0 {
 	width: 100% !important;
 	position: fixed !important;
  	left: 0 !important;
