updated extension to work for espn, added nba functionality

--- a/extension/espn.css
+++ b/extension/espn.css
@@ -9,7 +9,7 @@
 	padding: 0px !important;
 }
 
-#e3p-sidepanel, #e3p-scrollpane, #e3p-header, #e3p-flash-title, #e3p-scoreboard, #affiliate-logout, #e3p-socialnetworks {
+#e3p-sidepanel, #e3p-scrollpane, #e3p-header, #e3p-flash-title, #e3p-scoreboard, #affiliate-logout, #e3p-socialnetworks, #e3pschedule_btn2 {
 	display: none !important;
 }
 
