adjust algorithm for chrome app frames, extension adjustments for nbc universal networks

--- a/extension/bravo.css
+++ b/extension/bravo.css
@@ -4,10 +4,14 @@
     position: fixed !important;
     z-index: 1000000 !important;
     left: 0px !important;
-    top: 0px !important;  
+    top: 0px !important;
     padding: 0px !important;
 }
 
 #header, #site-header {
 	display: none !important;
+}
+
+body {
+    overflow: hidden;
 }
