--- a/extension/abc-live.css
+++ b/extension/abc-live.css
@@ -1,4 +1,18 @@
-#vp2k_container {
-  position: fixed !important;
-  z-index: 9999 !important;
+.bonus header {
+  display: none;
+}
+
+.bonus .videoContainer {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    z-index: 9 !important;
+}
+
+.page-wrapper::-webkit-scrollbar {
+    display: none !important;
+}
+
+#vp2_adobe_access_enabler {
+  visibility: hidden !important;
 }
