--- a/chrome-app/browser/extension/cbssn-iframe.css
+++ b/chrome-app/browser/extension/cbssn-iframe.css
@@ -1,12 +1,8 @@
-div.player div {
+#mycbsiplayer {
 	position: fixed !important;
     top: 0px !important;
     left: 0px !important;
     width: 100% !important;
     height: 100% !important;
-    z-index: 10 !important;
-}
-
-header.site-header {
-	display: none !important;
+    z-index: 9999999 !important;
 }
