--- a/chrome-app/browser/extension/abc-live.css
+++ b/chrome-app/browser/extension/abc-live.css
@@ -2,11 +2,15 @@
   display: none;
 }
 
+.bonus footer {
+  display: none;
+}
+
 .bonus .videoContainer {
     position: fixed !important;
     top: 0 !important;
     left: 0 !important;
-    z-index: 9 !important;
+    z-index: 9999 !important;
 }
 
 .page-wrapper::-webkit-scrollbar {
