--- a/chrome-app/browser/extension/mls2.css
+++ b/chrome-app/browser/extension/mls2.css
@@ -1,8 +1,16 @@
-#media-view.media-container>#media-player-main {
+.bonus #media-view.media-container>#media-player-main {
     position: fixed !important;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: 100000 !important;
+}
+
+.bonus header {
+    display: none;
+}
+
+.bonus .mls-scores {
+    display: none;
 }
