changes to mlb.js, nhl, twc

--- a/chrome-app/browser/extension/twc.css
+++ b/chrome-app/browser/extension/twc.css
@@ -1,4 +1,4 @@
-.bonus {
+.bonus, #playerWrapper {
 	position: fixed !important;
 	margin-top: 0px !important;
 	margin-right: 0px !important;
@@ -8,6 +8,20 @@
 	top: 0px !important;
 	bottom: 0px !important;
 	z-index: 1000 !important;
+	width: 100% !important;
+	height: 100% !important;
+}
+
+.twctv-flash-video-player {
+	position: fixed !important;
+	margin-top: 0px !important;
+	margin-right: 0px !important;
+	margin-left: 0px !important;
+	left: 0px !important;
+	right: 0px !important;
+	top: 0px !important;
+	bottom: 0px !important;
+	z-index: 0 !important;
 	width: 100% !important;
 	height: 100% !important;
 }
