--- a/chrome-app/browser/extension/nhltv.css
+++ b/chrome-app/browser/extension/nhltv.css
@@ -3,6 +3,8 @@
 	left: 0px !important;
 	top: 0px !important;
 	z-index: 100;
+    transform-origin: top left;
+    transform: scale(1.095);
 }
 
 #video-player object {
@@ -10,4 +12,6 @@
 	left: 0px !important;
 	top: -55px !important;
 	z-index: 100;
+    transform-origin: top left;
+    transform: scale(1.095);
 }
