added remote for mom, changed twc

--- a/chrome-app/browser/extension/twc.css
+++ b/chrome-app/browser/extension/twc.css
@@ -1,4 +1,18 @@
-.bonus, #playerWrapper {
+.twctv-flash-video-player .bonus {
+	position: fixed !important;
+	margin-top: 0px !important;
+	margin-right: 0px !important;
+	margin-left: 0px !important;
+	left: 0px !important;
+	right: 0px !important;
+	top: 0px !important;
+	bottom: 0px !important;
+	z-index: 1000 !important;
+	width: 100% !important;
+	height: 100% !important;
+}
+
+#playerWrapper {
 	position: fixed !important;
 	margin-top: 0px !important;
 	margin-right: 0px !important;
