--- a/chrome-app/browser/extension/fox.css
+++ b/chrome-app/browser/extension/fox.css
@@ -1,8 +1,8 @@
-.bonus {
+.jw-video {
     position: fixed !important;
     top: 0px !important;
     left: 0px !important;
-    z-index: 999 !important;
+    z-index: 9999 !important;
     width: 100% !important;
     height: 100% !important;
     margin: 0px !important;
