--- a/chrome-app/browser/extension/watchespn.css
+++ b/chrome-app/browser/extension/watchespn.css
@@ -3,6 +3,8 @@
     z-index: 999 !important;
     top: 0px !important;
     left: 0px !important;
+    height: 100% !important;
+    width: 100% !important;
 }
 
 body {
