pushing changes to new chrome app origin; cnn/dtv/fox/go90/vh1 support

--- a/chrome-app/browser/extension/fox.css
+++ b/chrome-app/browser/extension/fox.css
@@ -7,3 +7,16 @@
     height: 100% !important;
     margin: 0px !important;
 }
+
+body {
+    overflow: hidden !important;
+}
+
+.headroom-wrapper {
+    display: none;
+}
+
+.Live_panelPlayerAltHeader_1lYfk.Live_panelPlayer_1f4sJ.Live_videoSizer_2kIdJ {
+    padding: 0px !important;
+    margin: 0px !important;
+}
