--- a/chrome-app/browser/extension/cnn.css
+++ b/chrome-app/browser/extension/cnn.css
@@ -1,8 +1,8 @@
-#livePlayerContainer1 {	
+#topVideoContainer {
     position: fixed !important;
     top: 0px !important;
     left: 0px !important;
     width: 100% !important;
     height: 100% !important;
-    z-index: 9999 !important;
+    z-index: 999999999 !important;
 }
